# fastapi-helper

./: .gitignore  .pre-commit-config.yaml  Makefile  example.py  pyproject.toml  setup.cfg  setup.py  tox.ini
src/fastapi_helper/: __init__.py
src/fastapi_helper/exceptions/: http_exceptions.py
tests/: __init__.py  test_simple.py
