[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = 'venv,.git,dist,.github,.idea'
application-import-names = "app"
import-order-style = "google"
max-complexity = 10
ignore = ""
inline-quotes= '"'
